@@ -332,8 +332,7 @@ TransportReceiveStrategy<TH, DSH>::handle_dds_input(ACE_HANDLE fd)
 
     } else {
       VDBG_LVL((LM_ERROR, ACE_TEXT("(%P|%t) ERROR: Unrecoverable problem ")
-                ACE_TEXT("with data link detected: %p.\n"),
-                ACE_TEXT("receive_bytes")), 1);
+                ACE_TEXT("with data link detected\n")), 1);
 
       // The relink() will handle the connection to the ReconnectTask to do
       // the reconnect so this reactor thread will not be block.
